<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>io.petstore</groupId>
	<artifactId>api-test</artifactId>
	<version>1.0-SNAPSHOT</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring.boot.version>2.4.5</spring.boot.version>
		<cucumber.version>6.10.4</cucumber.version>

		<default.package>io.petstore.test</default.package>
		<swagger-core-version>1.6.2</swagger-core-version>
		<rest-assured.version>3.3.0</rest-assured.version>
		<gson-version>2.6.1</gson-version>
		<gson-fire-version>1.8.2</gson-fire-version>
		<okio-version>2.10.0</okio-version>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>11</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>surefire-junit47</artifactId>
						<version>3.0.0-M5</version>
					</dependency>
				</dependencies>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
    			</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring.boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<!-- Spring -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-logging</artifactId>
		</dependency>

		<!-- Others -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>${cucumber.version}</version>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>${cucumber.version}</version>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-spring</artifactId>
			<version>${cucumber.version}</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
		</dependency>
		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
		</dependency>
		<dependency>
			<groupId>io.swagger</groupId>
			<artifactId>swagger-annotations</artifactId>
			<version>${swagger-core-version}</version>
		</dependency>
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
			<version>${rest-assured.version}</version>
		</dependency>
		<dependency>
			<groupId>com.squareup.okio</groupId>
			<artifactId>okio</artifactId>
			<version>${okio-version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>${gson-version}</version>
		</dependency>
		<dependency>
			<groupId>io.gsonfire</groupId>
			<artifactId>gson-fire</artifactId>
			<version>${gson-fire-version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.findbugs</groupId>
			<artifactId>jsr305</artifactId>
			<version>3.0.2</version>
		</dependency>
	</dependencies>

	<profiles>
		<profile>
			<id>dev</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.openapitools</groupId>
						<artifactId>openapi-generator-maven-plugin</artifactId>
						<version>5.2.1</version>
						<executions>
							<!--rest-assured client-->
							<execution>
								<id>rest-assured-client</id>
								<goals>
									<goal>generate</goal>
								</goals>
								<configuration>
									<inputSpec>${project.basedir}/src/main/resources/petstore-oas.json</inputSpec>
									<output>${project.build.directory}/generated-sources/openapi-generator</output>
									<generatorName>java</generatorName>
									<configOptions>
										<dateLibrary>java11</dateLibrary>
									</configOptions>
									<library>rest-assured</library>
									<skipValidateSpec>true</skipValidateSpec>
									<skipIfSpecIsUnchanged>false</skipIfSpecIsUnchanged>
									<generateApiDocumentation>false</generateApiDocumentation>
									<generateModelDocumentation>false</generateModelDocumentation>
									<apiPackage>${default.package}.oas.client.api</apiPackage>
									<modelPackage>${default.package}.oas.client.model</modelPackage>
									<invokerPackage>${default.package}.oas.client</invokerPackage>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.assertj</groupId>
						<artifactId>assertj-assertions-generator-maven-plugin</artifactId>
						<version>2.2.0</version>
						<executions>
							<execution>
								<id>public-assertj</id>
								<goals>
									<goal>generate-assertions</goal>
								</goals>
								<phase>generate-sources</phase>
							</execution>
						</executions>
						<configuration>
							<packages>
								<param>${default.package}.oas.client.model</param>
							</packages>
							<generateAssertionsInPackage>${default.package}.oas.assertions</generateAssertionsInPackage>
							<hierarchical>true</hierarchical>
							<entryPointClassPackage>org.assertj</entryPointClassPackage>
							<targetDir>${project.basedir}/target/generated-sources/assertj</targetDir>
							<generateAssertions>true</generateAssertions>
							<generateBddAssertions>false</generateBddAssertions>
							<generateSoftAssertions>true</generateSoftAssertions>
							<generateJUnitSoftAssertions>false</generateJUnitSoftAssertions>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
